--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: 300ms;
 }
 
 .navbar{
@@ -14,6 +15,11 @@
     justify-content:space-between ;
     position: fixed;
     top: 0;
+    z-index: 2;
+}
+
+.navbar a:hover{
+    color: #1abc9c;
 }
 .first{
     width: 50%;
@@ -68,6 +74,7 @@
     width: 16em;
     margin-top: 150px;
 }
+
 
 .start h1{
     font-size: 4em;
@@ -132,6 +139,11 @@
     border-radius: 10px;
 }
 
+.porfolio-content img:hover{
+    cursor: pointer;
+    opacity: 0.8;
+    transform: scale(1.1);
+}
 
 .about{
     margin: 30px auto;
@@ -143,6 +155,7 @@
     justify-items: center;
     align-items: center;
     background-color:rgb(24, 161, 173);
+    margin-bottom: 30px;
 }
 
 .about .a-head{
@@ -182,7 +195,7 @@
     margin-right: 30px;
 }
 .contact{
-    margin: 30px auto;
+    margin: 60px auto;
     width: 95%;
     height: 800px;
     display: flex;
@@ -193,22 +206,79 @@
 }
 
 .contact form{
+    width: 60%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    justify-items: center;
+    justify-items: center;  
     align-items: center;
 }
-.contact .form .form-text .label{
+.contact form .label-box{
+    width: 70%;
+    height: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 20px;
+}
+
+.label{
+    font-family:sans-serif;
+    font-size: 1.5em;
+    opacity: 0.7;
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
 
 }
-.contact .form .form-text{
-
+.label-box .form-text{
+    width: 600px;
+    border: none;
+    border-bottom: 1px solid #495057;
+    padding: .5em 0.3em;
+    margin-top: 50px;
+    font-size: 1.5em;
+    opacity: 0.7;
+    line-height: 1.5em;
 }
 
-.contact .form .f-message{
-
+.m-label{
+    font-family:sans-serif;
+    font-size: 1.5em;
+    opacity: 0.7;
+    position: absolute;
+    top: 50px;
+    left: 10px;
 }
-.contact .form .button{
+.f-message{
+    width: 600px;
+    border: none;
+    border-bottom: 1px solid #495057;
+    padding: 2.5em 0;
+    font-size: 1.5em;
+    opacity: 0.7;
+    margin-top: 50px;
+    
+}
+.send-box{
+    width: 70%;
+    height: auto;
+}
+ .button{
+    width: 110px;
+    height: 70px;
+    margin-top: 50px;
+    border: none;
+    border-radius: 10px;
+    background-color: #1abc9c;
+    opacity: 0.8;
+    color: aliceblue;
+    font-size: 1.3em;
+    transition: 300ms;
+} 
 
+.button:hover{
+    opacity: 1;
 }
